fixed buttons on offer and unverified tooltip clipping on mylistings
Former-commit-id: 3c58311ba0dd903f22664c2dc5bd1b6f1dbc39ac

--- a/server/public/sass/prod_profile/profile_mylistings.scss
+++ b/server/public/sass/prod_profile/profile_mylistings.scss
@@ -94,6 +94,7 @@
 
 .offer-info {
   li {
+    padding : 5px;
     .icon {
       margin-right: 10px;
     }
